# student_19

./: .gitignore  Makefile  README.md  cases_char.c  cases_digit.c  ft_atoi.c  ft_isprint.c  ft_itoa.c  ft_lstmap_bonus.c  ft_memmove.c  ft_printf.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_strlcat.c  ft_strnstr.c
a-maze-ing/: .gitignore  Makefile  README.md  a_maze_ing.py  ascii_renderer.py  cell.py  config.txt  display_map.py  main.py  maze.py  maze.txt  maze_generator.py  maze_morgane.py  maze_renderer.py  parser_maze.py  pyproject.toml  requirements.txt  test.py
a-maze-ing/mazegen/: __init__.py  cell.py  maze_generator.py  maze_parser.py
a-maze-ing/mazegen_info/: LICENSE  README.md
a-maze-ing/renderers/: __init__.py  ascii_renderer.py  maze_renderer.py  mlx_renderer.py
fly_in/: .gitignore  01_linear_path.txt  02_capacity_hell.txt  02_simple_fork.txt  03-test1.txt  Makefile  README  brouillon.py  connection.py  drone.py  engine.py  fly_in.py  graph.py  hub.py  main.py  map.py  my_parser.py  notes  parser.py  parsing.py  pathfinder.py  pyproject.toml  simulation.py  temp.py
fly_in/data_models/: __init__.py  connection.py  drone.py  graph.py  hub.py
fly_in/srcs/: __init__.py  engine.py  my_parser.py  pathfinder.py  simulation.py
fly_in/test_config/: connection_double.txt  connection_invalid_syntax.txt  connection_invalid_syntax2.txt  connection_meta_invalid.txt  connection_meta_not_int.txt  connection_meta_not_positive.txt  connection_name_invalid.txt  doublepoint_missing.txt  drone_missing.txt  drone_not_first.txt  drone_not_int.txt  g_mistake_in_name.txt  (+14 more)
(+208 files in other folders)
