[tool.poetry]
name = "ex01"
version = "0.1.0"
description = "Matrix Data Loading"
authors = ["mmeurer"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
numpy = "^1.26.0"
matplotlib = "^3.7.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"